# termal

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  Makefile-archives  README.crates.md  README.md  index.html  meta.yaml  roadmap.md  rustfmt.toml  termal.md
.github/workflows/: ci.yml
app-tests/: .gitignore  Makefile  autoexepect-to-test-script.sh  run-tests.sh  test-bottom-01.exp  test-ends-01.exp  test-hjkl-01.exp  test-hjkl-02.exp  test-hl-retained-01.exp  test-info-01.exp  test-lbl-pane-width-01.exp  test-panic.exp  test-quit-01.exp  test-viewport-01.exp  test-viewport-02.exp  test-viewport-03.exp  test-zoom-01.exp  test-zoom-02.exp  test-zoom-03.exp  test-zoom-AR-01.exp  test-zoom-AR-point-01.exp  test-zoombox-01.exp  test-zoombox-02.exp  test-zoombox-03.exp  test-zoombox-AR-zeroheight-01.exp  test-zoombox-AR-zerowidth.exp  test-zoombox-point-01.exp  test-zoombox-zeroheight-01.exp  test-zoombox-zerowidth-01.exp
app-tests/data/: test-aln-04.fas  test-aln-05.fas  test-aln-06.fas  test-zoom-02.fas  test-zoom-03.fas
data/: .gitignore  100s100c.aln  200s100c.aln  50s100c.aln  CD00377_ICL-PEPM_wDesc.msa  aln4.pep  aln5.pep  color-test.msa  example-1.msa  metric-test.msa  tall.msa  test-cons.fas  test-density.msa  test-metrics.msa  test1.fas  test2.fas  test3.pep  test4.aln  wide.msa
data/colormaps/: a0l50L80.json  c2kl60L75.json  constrained-AW_l60L75.json  high-contrast.json  l60L75.json  l65L90.json  no-green.json  s30l55L75.json  saturated.json  test.json
manuscript/: .gitignore  Makefile  features.gnumeric  termal.bib  termal.cast  termal.tex  time.tcl
src/: alignment.rs  app.rs  fasta.rs  main.rs  ui.rs  vec_f64_aux.rs
src/alignment/: permutation.rs
src/ui/: barchart.rs  bindings.md  color_map.rs  color_scheme.rs  conservation.rs  key_handling.rs  render.rs
src/ui/colormaps/: gecos_default.json
test/: q.exp  run-tests.sh  script.exp  test-1.exp  test-zoom-02.exp
test/data/: test-zoom-01.fas
