[package]
name = "termal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
crossterm = "0.27.0"
ratatui = "0.29"
rasta = { git = "https://github.com/juniert/rasta.git" }
clap = { version = "4.5.4", features = ["derive", "cargo"] }
bitflags = "2.6.0"
approx = "0.3.2"
serde_json = "1.0.135"
hex_color = "3"
itertools = "0.14.0"
