[package]
name = "termal-msa"
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://gitlab.sib.swiss/tjunier/termal"
readme = "README.md"
description = "A viewer of multiple sequence alignments, with a text-based user interface"
keywords = ["multiple-alignment", "viewer", "terminal", "TUI"]
categories = ["science::bioinformatics", "science::bioinformatics::sequence-analysis", "command-line-utilities"]
include = ["**/*.rs", "src/ui/bindings.md", "Cargo.toml", "README.crates.md", "data/example-1.msa", "data/CD00377_ICL-PEPM_wDesc.msa", "data/large_DNA.msa"]
#homepage: no page other than repo

[[bin]]
name = "termal"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
crossterm = "0.27.0"
ratatui = "0.29"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
bitflags = "2.6.0"
approx = "0.3.2"
serde_json = "1.0.135"
hex_color = "3"
itertools = "0.14.0"
